# django_kv

./: .flake8  .gitignore  LICENSE  README.md  TECHNICAL_PLAN.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
django_kv/: __init__.py  aio.py  apps.py  encryption.py  observability.py  otel.py  sessions.py  sessions_async.py  sessions_encrypted.py  utils.py  validation.py
django_kv/backends/: __init__.py  async_base.py  async_memory.py  base.py  disk.py  memory.py  redis.py
examples/: basic_usage.py
tests/: __init__.py  conftest.py  test_backends.py  test_disk_backend.py  test_observability.py  test_serialization.py  test_sessions.py  test_utils.py
